# fastcdc2020

./: MODULE.bazel  README.md  go.mod
.github/workflows/: test.yaml
fastcdc/: BUILD.bazel  fastcdc.go  fastcdc_test.go
